--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body>
          <div class="container">
              <h1>Tic Tac Toe</h1>
-                <h1 id="winner">Winner is: </h1>
+              <div class="score">
+                  <h1 id="h11">X : 0</h1>
+                  <h1 id="h12">O : 0</h1>
+              </div>
                 <div class="game">
                     <div class="bored">
                         <div class="row-tic">
@@ -27,11 +30,6 @@
                             <div class="tic-box"data-num="8">    </div>
                         </div>
                     </div>
-                
-                 <div class="results" id="rs">
-                     <p id="h1p">The Score Is Here:</p>
-                 </div>
-                </div>
          </div>
          <script src="ticTac.js"></script>
     </body>
